App complete, need to add stills

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="assets/CSS/reset.css">
     <link rel="stylesheet" href="assets/CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <title>GIPHY App</title>
   </head>
   <body>
@@ -19,10 +21,12 @@
         <div class="form">
           <label for="gif-input">Add a Celebrity GIF</label>
           <input type="text" id="gif-input">
+          <input id="add-gif" type="submit" value="Generate Gifs">
         </div>
       </div>
       <!-- Area will the buttons will be generated -->
       <div id="button-dumpster"></div>
+      <div id="gif-container"></div>
     </div>
     <script type="text/javascript" src="assets/JavaScript/app.js"></script>
   </body>
